Updated .env to reflect hosted database

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-DB_HOST=localhost
-DB_NAME=inventory_db
-DB_USER=opuser
-DB_PASSWORD=access!Br2
+DB_HOST=db.ebebtisranrzxhyxkpke.supabase.co
+DB_NAME=postgres
+DB_USER=commonUser
+DB_PASSWORD=access!Br2r3g0ps
+DB_PORT=5432
